# forward_forward

./: .gitignore  pyproject.toml
forward_forward/: main.py
