[tool.poetry]
name = "forward-forward"
version = "0.1.0"
description = ""
authors = ["Stefan Mesken <kappadistributive@gmail.com>"]
readme = "README.md"
packages = [{include = "forward_forward"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
